--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="Condition_Description_FavCount">몇 명의 사람이 마음에 들어 할 때 트윗을 남길까요?</string>
     <string name="Condition_Description_RecentCount">마지막에 작성한 몇 개의 트윗을 남겨둘까요?</string>
     <string name="Condition_Description_RecentMinute">최근 몇 분 까지의 트윗을 남겨둘까요?</string>
+    <string name="Delete">Delete</string>
+    <string name="Condition_Display_RetweetCount">%1$d회 이상 리트윗된 내 트윗</string>
+    <string name="Condition_Display_FavCount">%1$d명 이상 마음에 들어한 내 트윗</string>
+    <string name="Condition_Display_RecentCount">가장 최근 작성한 %1$d개의 트윗</string>
+    <string name="Condition_Display_RecentDate">최근 %1$d분 전에 작성된 트윗</string>
 </resources>
