Hetzer 조건 추가 (미디어, Geo)

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -8,23 +8,31 @@
     <string name="DeleteOptionPlease">지우지 않고 남겨둘 트윗을 지정하세요.</string>
     <string name="WhichTweetDoNotRemove">어떤 트윗을 남겨둘까요?</string>
     <string name="AddCondition">조건 추가</string>
-    <string name="OK">OK</string>
+    <string name="OK">확인</string>
     <string name="Condition_FavMyself">내가 마음에 들어한 트윗</string>
     <string name="Condition_FavCount">다른 사람이 마음에 들어한 내 트윗</string>
     <string name="Condition_RetweetCount">다른 사람이 리트윗한 내 트윗</string>
     <string name="Condition_RecentCount">최근 작성한 트윗 (개수)</string>
     <string name="Condition_RecentMinute">최근 작성한 트윗 (시간)</string>
     <string name="OnlyNumberAllowed">숫자만 입력해주세요!</string>
-    <string name="Cancel">Cancel</string>
-    <string name="Condition_Description_RetweetCount">몇 번 리트윗 되었을 때 트윗을 남겨둘까요?</string>
-    <string name="Condition_Description_FavCount">몇 명의 사람들이 마음에 들어 할 때 트윗을 남겨둘까요?</string>
-    <string name="Condition_Description_RecentCount">최근 몇 개 까지의 트윗을 남겨둘까요?</string>
+    <string name="Cancel">취소</string>
+    <string name="Condition_Description_RetweetCount">리트윗이 몇 번을 넘겼을 때 트윗을 남길까요?</string>
+    <string name="Condition_Description_FavCount">몇 명의 사람이 마음에 들어 할 때 트윗을 남길까요?</string>
+    <string name="Condition_Description_RecentCount">마지막에 작성한 몇 개의 트윗을 남겨둘까요?</string>
     <string name="Condition_Description_RecentMinute">최근 몇 분 까지의 트윗을 남겨둘까요?</string>
-    <string name="Delete">Delete</string>
+    <string name="Delete">삭제</string>
     <string name="Condition_Display_RetweetCount">%1$d회 이상 리트윗된 내 트윗</string>
     <string name="Condition_Display_FavCount">%1$d명 이상 마음에 들어한 내 트윗</string>
+    <string name="Condition_Display_RecentCount">가장 최근 작성한 %1$d개의 트윗</string>
+    <string name="Condition_Display_RecentDate">최근 %1$d분 전에 작성된 트윗</string>
     <string name="Hetzer_TweetPulling">내 트윗 목록을 가져오는 중입니다.</string>
     <string name="Hetzer_TweetRemoving">트윗을 삭제하는 중입니다</string>
     <string name="Done">완료!</string>
     <string name="Hetzer_Done">조건에 맞는 트윗이 모두 삭제되었습니다.</string>
+    <string name="Condition_IncludedKeyword">특정 문구가 포함된 트윗</string>
+    <string name="Condition_IncludedMedia">미디어를 포함한 트윗</string>
+    <string name="Condition_ExcludedMedia">미디어를 포함하지 않은 트윗</string>
+    <string name="Condition_IncludedGEO">위치 정보를 포함하지 않은 트윗</string>
+    <string name="Condition_Display_IncludedKeyword">내용에 \'%1$s\'를 포함한 트윗</string>
+    <string name="Condition_Description_IncludedKeyword">내용에 어떤 문구가 포함되었을 때 트윗을 남겨둘까요?</string>
 </resources>
