--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,17 +8,17 @@
     <string name="WhichTweetDoNotRemove">Which tweet do you want avoid erasing?</string>
     <string name="AddCondition">Add Condition</string>
     <string name="OK">OK</string>
-    <string name="Condition_FavMyself"></string>
-    <string name="Condition_FavCount"></string>
-    <string name="Condition_RetweetCount"></string>
-    <string name="Condition_RecentCount"></string>
-    <string name="Condition_RecentMinute"></string>
+    <string name="Condition_FavMyself">Condition_FavMyself</string>
+    <string name="Condition_FavCount">Condition_FavCount</string>
+    <string name="Condition_RetweetCount">Condition_RetweetCount</string>
+    <string name="Condition_RecentCount">Condition_RecentCount</string>
+    <string name="Condition_RecentMinute">Condition_RecentMinute</string>
     <string name="OnlyNumberAllowed">Must enter numbers!</string>
     <string name="Cancel">Cancel</string>
-    <string name="Condition_Description_RetweetCount">리트윗이 몇 번을 넘겼을 때 트윗을 남길까요?</string>
-    <string name="Condition_Description_FavCount">몇 명의 사람이 마음에 들어 할 때 트윗을 남길까요?</string>
-    <string name="Condition_Description_RecentCount">마지막에 작성한 몇 개의 트윗을 남겨둘까요?</string>
-    <string name="Condition_Description_RecentMinute">최근 몇 분 까지의 트윗을 남겨둘까요?</string>
+    <string name="Condition_Description_RetweetCount">Condition_Description_RetweetCount</string>
+    <string name="Condition_Description_FavCount">Condition_Description_FavCount</string>
+    <string name="Condition_Description_RecentCount">Condition_Description_RecentCount</string>
+    <string name="Condition_Description_RecentMinute">Condition_Description_RecentMinute</string>
     <string name="Delete">Delete</string>
     <string name="Condition_Display_RetweetCount">%1$d회 이상 리트윗된 내 트윗</string>
     <string name="Condition_Display_FavCount">%1$d명 이상 마음에 들어한 내 트윗</string>
@@ -28,4 +28,10 @@
     <string name="Hetzer_TweetRemoving">트윗을 삭제하는 중입니다</string>
     <string name="Done">완료!</string>
     <string name="Hetzer_Done">조건에 맞는 트윗이 모두 삭제되었습니다.</string>
+    <string name="Condition_IncludedKeyword">특정 문구가 포함된 트윗</string>
+    <string name="Condition_IncludedMedia">미디어를 포함한 트윗</string>
+    <string name="Condition_ExcludedMedia">미디어를 포함하지 않은 트윗</string>
+    <string name="Condition_IncludedGEO">위치 정보를 포함하지 않은 트윗</string>
+    <string name="Condition_Display_IncludedKeyword">내용에 \'%1$s\'를 포함한 트윗</string>
+    <string name="Condition_Description_IncludedKeyword">내용에 어떤 문구가 포함되었을 때 트윗을 남겨둘까요?</string>
 </resources>
