--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -36,4 +36,6 @@
     <string name="Condition_Display_IncludedKeyword">내용에 \'%1$s\'를 포함한 트윗</string>
     <string name="Condition_Description_IncludedKeyword">내용에 어떤 문구가 포함되었을 때 트윗을 남겨둘까요?</string>
     <string name="CleanTweet">이 조건으로 실행하기</string>
+    <string name="TweetCleanerDescription">지정한 조건과 일치하는 트윗들을 삭제합니다.</string>
+    <string name="FollowingManagementDescription">팔로잉 관리 메뉴를 엽니다.</string>
 </resources>
