SharedUserProperties 및 언팔매니저 베이스 코드 작성

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -45,4 +45,5 @@
     <string name="TweetCannotRestore">삭제된 트윗은 되돌릴 수 없습니다.</string>
     <string name="YesDeleteIt">네, 삭제할게요!</string>
     <string name="Wait">잠깐만요...</string>
+    <string name="FriendPulling">팔로우 목록을 가져오는 중입니다.</string>
 </resources>
