문자열을 한글만 남기고 삭제

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Tweeper</string>
-    <string name="TweetCleaner">Erase Tweet</string>
-    <string name="FollowerManagement">Follower\nManagement</string>
-    <string name="FollowingManagement">Following\nManagement</string>
-    <string name="DeleteOption">Erase Option</string>
-    <string name="DeleteOptionPlease">Select condition of tweet not to erase.</string>
-    <string name="WhichTweetDoNotRemove">Which tweet do you want avoid erasing?</string>
-    <string name="AddCondition">Add Condition</string>
-    <string name="OK">OK</string>
-    <string name="Condition_FavMyself">Condition_FavMyself</string>
-    <string name="Condition_FavCount">Condition_FavCount</string>
-    <string name="Condition_RetweetCount">Condition_RetweetCount</string>
-    <string name="Condition_RecentCount">Condition_RecentCount</string>
-    <string name="Condition_RecentMinute">Condition_RecentMinute</string>
-    <string name="OnlyNumberAllowed">Must enter numbers!</string>
-    <string name="Cancel">Cancel</string>
-    <string name="Condition_Description_RetweetCount">Condition_Description_RetweetCount</string>
-    <string name="Condition_Description_FavCount">Condition_Description_FavCount</string>
-    <string name="Condition_Description_RecentCount">Condition_Description_RecentCount</string>
-    <string name="Condition_Description_RecentMinute">Condition_Description_RecentMinute</string>
-    <string name="Delete">Delete</string>
+    <string name="app_name">트윗지기</string>
+    <string name="TweetCleaner">트윗 삭제</string>
+    <string name="FollowerManagement">팔로워 관리</string>
+    <string name="FollowingManagement">팔로잉 관리</string>
+    <string name="DeleteOption">삭제 옵션</string>
+    <string name="DeleteOptionPlease">지우지 않고 남겨둘 트윗을 지정하세요.</string>
+    <string name="WhichTweetDoNotRemove">어떤 트윗을 남겨둘까요?</string>
+    <string name="AddCondition">조건 추가</string>
+    <string name="OK">확인</string>
+    <string name="Condition_FavMyself">내가 마음에 들어한 트윗</string>
+    <string name="Condition_FavCount">다른 사람이 마음에 들어한 내 트윗</string>
+    <string name="Condition_RetweetCount">다른 사람이 리트윗한 내 트윗</string>
+    <string name="Condition_RecentCount">최근 작성한 트윗 (개수)</string>
+    <string name="Condition_RecentMinute">최근 작성한 트윗 (시간)</string>
+    <string name="OnlyNumberAllowed">숫자만 입력해주세요!</string>
+    <string name="Cancel">취소</string>
+    <string name="Condition_Description_RetweetCount">리트윗이 몇 번을 넘겼을 때 트윗을 남길까요?</string>
+    <string name="Condition_Description_FavCount">몇 명의 사람이 마음에 들어 할 때 트윗을 남길까요?</string>
+    <string name="Condition_Description_RecentCount">마지막에 작성한 몇 개의 트윗을 남겨둘까요?</string>
+    <string name="Condition_Description_RecentMinute">최근 몇 분 까지의 트윗을 남겨둘까요?</string>
+    <string name="Delete">삭제</string>
     <string name="Condition_Display_RetweetCount">%1$d회 이상 리트윗된 내 트윗</string>
     <string name="Condition_Display_FavCount">%1$d명 이상 마음에 들어한 내 트윗</string>
     <string name="Condition_Display_RecentCount">가장 최근 작성한 %1$d개의 트윗</string>
@@ -40,11 +41,11 @@
     <string name="FollowerManagementDescription">팔로잉 관리 메뉴를 엽니다.</string>
     <string name="Error">에러!</string>
     <string name="RateLimitError">모든 트윗을 불러오지 못했습니다.\n나중에 다시 시도해 주세요</string>
-    <string name="AreYouSure">Are you sure?</string>
-    <string name="TweetCannotRestore">Deleted tweet is cannot restore.</string>
-    <string name="YesDeleteIt">Yes, Delete it!</string>
-    <string name="Wait">Wait...</string>
+    <string name="AreYouSure">확실한가요?</string>
+    <string name="TweetCannotRestore">삭제된 트윗은 되돌릴 수 없습니다.</string>
+    <string name="YesDeleteIt">네, 삭제할게요!</string>
+    <string name="Wait">잠깐만요…</string>
     <string name="FriendPulling">팔로우 목록을 가져오는 중입니다.</string>
     <string name="FollowerPulling">팔로워 목록을 가져오는 중입니다.</string>
-    <string name="CompareFsFw">팔로잉 목록과 팔로워 목록을 비교하는 중입니다.</string>
+    <string name="CompareFsFw">가져온 목록을 비교하고 있습니다.</string>
 </resources>
