--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,8 @@
     <string name="PermissionRequestTitle">권한이 필요합니다.</string>
     <string name="Yes">넵</string>
     <string name="No">아니요</string>
+    <string name="Unfollow">언팔로우</string>
+    <string name="ShowProfile">프로필 보기</string>
+    <string name="ActionDoNotRestore">이 행동은 돌이킬 수 없습니다!</string>
+    <string name="JobDone">작업을 완료했습니다.</string>
 </resources>
