--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="ShowProfile">프로필 보기</string>
     <string name="ActionDoNotRestore">이 행동은 돌이킬 수 없습니다!</string>
     <string name="JobDone">작업을 완료했습니다.</string>
+    <string name="Chainblock">체인블락</string>
+    <string name="ChainblockDescription">대상 유저의 모든 팔로잉과 팔로워를 블락합니다.</string>
 </resources>
