RateLimitExceed 오류 처리 코드 작성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="FollowingManagementDescription">팔로잉 관리 메뉴를 엽니다.</string>
     <string name="FollowerManagementDescription">나를 팔로우하지 않는 사람들을 봅니다.</string>
     <string name="Error">에러!</string>
-    <string name="RateLimitError">모든 트윗을 불러오지 못했습니다.\n나중에 다시 시도해 주세요</string>
+    <string name="RateLimitError">트위터에서 제공하는 api 한도를 초과했습니다\n나중에 다시 시도해주세요.\n(%1$s)</string>
     <string name="AreYouSure">확실한가요?</string>
     <string name="TweetCannotRestore">삭제된 트윗은 되돌릴 수 없습니다.</string>
     <string name="YesDeleteIt">네, 삭제할게요!</string>
@@ -74,4 +74,5 @@
     <string name="TokenManagement">로그인 관리</string>
     <string name="TokenManagementDetail">트윗일지에 로그인된 계정을 관리합니다.</string>
     <string name="AddUser">유저 추가</string>
+    <string name="NoApplicableUser">해당하는 유저가 없습니다.</string>
 </resources>
