체인블락 ui 코드 개선

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="NotCompletely">API 리밋으로 인하여 일부 데이터를 불러오지 못했습니다.</string>
     <string name="ChainBlockDone">체인블락을 완료했습니다.</string>
     <string name="UserProtected">프로텍트 설정된 유저를 대상으로 사용할 수 없습니다.</string>
-    <string name="ChainBlockProcessing">해당 유저들을 블락하는 중입니다.</string>
+    <string name="ChainBlockProcessing">해당 유저들을 블락하는 중입니다.\n(%1$d / %2$d)</string>
     <string name="BlockClear">블락 일괄 해제</string>
     <string name="BlockClearDescriptipn">내가 블락한 유저들을 전부 블락 해제합니다.</string>
     <string name="Run">실행하기</string>
