--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,8 +25,10 @@
     <string name="Condition_Display_FavCount">%1$d명 이상 마음에 들어한 내 트윗</string>
     <string name="Condition_Display_RecentCount">가장 최근 작성한 %1$d개의 트윗</string>
     <string name="Condition_Display_RecentDate">최근 %1$d분 전에 작성된 트윗</string>
-    <string name="Hetzer_TweetPulling">내 트윗 목록을 가져오는 중입니다.</string>
-    <string name="Hetzer_TweetRemoving">트윗을 삭제하는 중입니다</string>
+    <string name="Hetzer_TweetPullingTitle">내 트윗 목록을 불러오는 중입니다.</string>
+    <string name="Hetzer_TweetPullingContent">현재 %1$d개의 트윗을 불러왔습니다.</string>
+    <string name="Hetzer_TweetRemovingTitle">트윗을 삭제하는 중입니다.</string>
+    <string name="Hetzer_TweetRemovingContent">총 %1$d 트윗 중 %2$d 번째 작업중..</string>
     <string name="Done">완료!</string>
     <string name="Hetzer_Done">조건에 맞는 트윗이 모두 삭제되었습니다.</string>
     <string name="Condition_IncludedKeyword">특정 문구가 포함된 트윗</string>
@@ -91,4 +93,7 @@
     <string name="FetchBlockedUsers">블락한 유저 정보를 가져오는 중입니다.</string>
     <string name="ClearBlockedUsers">블락을 해제하는 중입니다.\n(%1$d / %2$d)</string>
     <string name="BlockCleared">모든 블락을 해제했습니다.</string>
+    <string name="Tweeper">트윗지기</string>
+    <string name="Hetzer_WaitingTitle">가져올 트윗이 너무 많아 API 한도를 초과했습니다.</string>
+    <string name="Hetzer_WaitingContent">잠시 후 자동으로 다시 시도합니다..</string>
 </resources>
