--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,6 @@
     <string name="WhichTweetDoNotRemove">어떤 트윗을 남겨둘까요?</string>
     <string name="AddCondition">조건 추가</string>
     <string name="OK">확인</string>
-    <string name="Condition_FavMyself">내가 마음에 들어한 트윗</string>
-    <string name="Condition_FavCount">다른 사람이 마음에 들어한 내 트윗</string>
-    <string name="Condition_RetweetCount">다른 사람이 리트윗한 내 트윗</string>
-    <string name="Condition_RecentCount">최근 작성한 트윗 (개수)</string>
-    <string name="Condition_RecentMinute">최근 작성한 트윗 (시간)</string>
     <string name="OnlyNumberAllowed">숫자만 입력해주세요!</string>
     <string name="Cancel">취소</string>
     <string name="Condition_Description_RetweetCount">리트윗이 몇 번을 넘겼을 때 트윗을 남길까요?</string>
@@ -21,21 +16,12 @@
     <string name="Condition_Description_RecentCount">마지막에 작성한 몇 개의 트윗을 남겨둘까요?</string>
     <string name="Condition_Description_RecentMinute">최근 몇 분 까지의 트윗을 남겨둘까요?</string>
     <string name="Delete">삭제</string>
-    <string name="Condition_Display_RetweetCount">%1$d회 이상 리트윗된 내 트윗</string>
-    <string name="Condition_Display_FavCount">%1$d명 이상 마음에 들어한 내 트윗</string>
-    <string name="Condition_Display_RecentCount">가장 최근 작성한 %1$d개의 트윗</string>
-    <string name="Condition_Display_RecentDate">최근 %1$d분 전에 작성된 트윗</string>
     <string name="Hetzer_TweetPullingTitle">내 트윗 목록을 불러오는 중입니다.</string>
     <string name="Hetzer_TweetPullingContent">현재 %1$d개의 트윗을 불러왔습니다.</string>
     <string name="Hetzer_TweetRemovingTitle">트윗을 삭제하는 중입니다.</string>
     <string name="Hetzer_TweetRemovingContent">총 %1$d 트윗 중 %2$d 번째 작업중..</string>
     <string name="Done">완료!</string>
     <string name="Hetzer_Done">조건에 맞는 트윗이 모두 삭제되었습니다.</string>
-    <string name="Condition_IncludedKeyword">특정 문구가 포함된 트윗</string>
-    <string name="Condition_IncludedMedia">미디어를 포함한 트윗</string>
-    <string name="Condition_ExcludedMedia">미디어를 포함하지 않은 트윗</string>
-    <string name="Condition_IncludedGEO">위치 정보를 포함하지 않은 트윗</string>
-    <string name="Condition_Display_IncludedKeyword">내용에 \'%1$s\'를 포함한 트윗</string>
     <string name="Condition_Description_IncludedKeyword">내용에 어떤 문구가 포함되었을 때 트윗을 남겨둘까요?</string>
     <string name="CleanTweet">이 조건으로 실행하기</string>
     <string name="TweetCleanerDescription">조건에 맞는 트윗들을 삭제합니다.</string>
@@ -96,4 +82,20 @@
     <string name="Tweeper">트윗지기</string>
     <string name="Hetzer_WaitingTitle">가져올 트윗이 너무 많아 API 한도를 초과했습니다.</string>
     <string name="Hetzer_WaitingContent">잠시 후 자동으로 다시 시도합니다..</string>
+    <string name="HetzerConditions_1">내가 마음에 들어한 트윗</string>
+    <string name="HetzerConditions_2">내가 마음에 들어하지 않은 트윗</string>
+    <string name="HetzerConditions_3">내가 리트윗한 트윗</string>
+    <string name="HetzerConditions_4">내가 리트윗하지 않은 트윗</string>
+    <string name="HetzerConditions_5">%1$s회 이상 마음 받은 트윗</string>
+    <string name="HetzerConditions_6">%1$s회 이하 마음 받은 트윗</string>
+    <string name="HetzerConditions_7">%1$s회 이상 리트윗 받은 트윗</string>
+    <string name="HetzerConditions_8">%1$s회 이하 리트윗 받은 트윗</string>
+    <string name="HetzerConditions_9">미디어를 포함한 트윗"</string>
+    <string name="HetzerConditions_10">미디어를 포함하지 않은 트윗</string>
+    <string name="HetzerConditions_11">키워드를 포함한 트윗</string>
+    <string name="HetzerConditions_12">키워드를 포함하지 않은 트윗</string>
+    <string name="HetzerConditions_13">위치 정보를 포함한 트윗</string>
+    <string name="HetzerConditions_14">위치 정보를 포함하지 않은 트윗</string>
+    <string name="HetzerConditions_15">최근 %1$s개 까지의 트윗</string>
+    <string name="HetzerConditions_16">최근 %1$s분 이내의 트윗</string>
 </resources>
