트윗 청소기 보고서 리스트 액티비터 초안 작성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     <string name="DeleteReport">트윗 청소기 보고서</string>
     <string name="DeleteReportDesc">트윗 청소기가 삭제한 트윗들입니다.</string>
     <string name="DeleteReportCount">삭제한 트윗 수 : %1$d</string>
+    <string name="DeleteReportsDesc">조회할 보고서를 선택해주세요.</string>
 </resources>
